@@ -70,7 +70,6 @@ my $builder = $class->new(
           'XML::LibXML'                  => 0,
 
           'npg_common::roles::software_location'               => 0,
-          'npg_qc::autoqc::qc_store'                           => 0,
           'npg_tracking::data::reference::find'                => 0,
           'npg_tracking::data::reference::list'                => 0,
           'npg_tracking::data::bait'                           => 0,
@@ -86,8 +85,10 @@ my $builder = $class->new(
           'npg_tracking::Schema'                               => 0,
           'npg_tracking::util::types'                          => 0,
           'npg_tracking::util::abs_path'                       => 0,
+          'npg_tracking::util::pipeline_config'                => 0,
           'npg_qc::Schema'                                     => 0,
           'npg_qc::autoqc::role::result'                       => 0,
+          'npg_qc::autoqc::qc_store'                           => 0,
           'st::api::lims'                                      => 0,
           'st::api::lims::ml_warehouse'                        => 0,
           'npg::api::request'                                  => 0,
