@@ -53,7 +53,8 @@ Readonly::Array  my @NO_SCRIPT_ARG_ATTRS  => qw/
                                                 conf_path
                                                 logger
                                                 workflow_type
-                                                release_config
+                                                product_config
+                                                local_bin
                                                /;
 
 =head1 NAME
